; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_unaligned_64.c_log_unaligned.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_unaligned_64.c_log_unaligned.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_regs = type { i64 }

@log_unaligned.count = internal global i64 0, align 8
@log_unaligned.last_time = internal global i64 0, align 8
@jiffies = common dso_local global i64 0, align 8
@HZ = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"Kernel unaligned access at TPC[%lx] %pS\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pt_regs*)* @log_unaligned to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @log_unaligned(%struct.pt_regs* %0) #0 {
  %2 = alloca %struct.pt_regs*, align 8
  store %struct.pt_regs* %0, %struct.pt_regs** %2, align 8
  %3 = load i64, i64* @jiffies, align 8
  %4 = load i64, i64* @log_unaligned.last_time, align 8
  %5 = load i32, i32* @HZ, align 4
  %6 = mul nsw i32 5, %5
  %7 = sext i32 %6 to i64
  %8 = add i64 %4, %7
  %9 = call i64 @time_after(i64 %3, i64 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i64 0, i64* @log_unaligned.count, align 8
  br label %12

12:                                               ; preds = %11, %1
  %13 = load i64, i64* @log_unaligned.count, align 8
  %14 = icmp ult i64 %13, 5
  br i1 %14, label %15, label %27

15:                                               ; preds = %12
  %16 = load i64, i64* @jiffies, align 8
  store i64 %16, i64* @log_unaligned.last_time, align 8
  %17 = load i64, i64* @log_unaligned.count, align 8
  %18 = add i64 %17, 1
  store i64 %18, i64* @log_unaligned.count, align 8
  %19 = load %struct.pt_regs*, %struct.pt_regs** %2, align 8
  %20 = getelementptr inbounds %struct.pt_regs, %struct.pt_regs* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load %struct.pt_regs*, %struct.pt_regs** %2, align 8
  %23 = getelementptr inbounds %struct.pt_regs, %struct.pt_regs* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = inttoptr i64 %24 to i8*
  %26 = call i32 @printk(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i64 %21, i8* %25)
  br label %27

27:                                               ; preds = %15, %12
  ret void
}

declare dso_local i64 @time_after(i64, i64) #1

declare dso_local i32 @printk(i8*, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
